--- a/2-Trillo/sass/_layout.scss
+++ b/2-Trillo/sass/_layout.scss
@@ -8,8 +8,13 @@
 }
 .header{
     height: 7rem;
+    font-size: 1.4rem;
     background-color: #fff;
     border-bottom: var(--color-grey-light-2);
+    
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 .content{
     display:flex ;
@@ -17,10 +22,14 @@
 
 .sidebar{
     background-color: var(--color-grey-dark-1);
-    flex: 0 0 18%
+    flex: 0 0 18%;
+    display:flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .hotel-view{
+    height: 80rem;
     background-color: orangered;
     flex: 1;
 }
