--- a/2-Trillo/css/style.css
+++ b/2-Trillo/css/style.css
@@ -1,12 +1,9 @@
-/*
-COLORS
-
-
-*/
 :root {
+  /*COLORS*/
   --color-primary:#eb2f64;
   --color-primary-light:#FF3366;
   --color-primary-dark:#BA265D;
+  --color-white: #fff;
   --color-grey-light-1: #faf9f9;
   --color-grey-light-2: #f4f2f2;
   --color-grey-light-3: #f0eeee;
@@ -14,7 +11,10 @@ COLORS
   --color-grey-dark-1: #333;
   --color-grey-dark-2: #777;
   --color-grey-dark-3: #999;
-  --shadow-dark: 0 2rem 6rem rgba(0,0,0,.3); }
+  /*Others varaiables*/
+  --shadow-dark: 0 2rem 6rem rgba(0,0,0,.3);
+  --shadow-light: 0 2rem 5rem rgba(0, 0, 0, .06);
+  --line: 1px solid var(--color-grey-light-2); }
 
 *,
 ::before,
@@ -35,7 +35,7 @@ body {
   background-image: linear-gradient(to right bottom, var(--color-primary-light), var(--color-primary-dark));
   background-size: cover;
   background-repeat: no-repeat;
-  min-height: 100vh; }
+  min-height: 95vh; }
 
 .container {
   max-width: 120rem;
@@ -47,8 +47,8 @@ body {
 .header {
   height: 7rem;
   font-size: 1.4rem;
-  background-color: #fff;
-  border-bottom: var(--color-grey-light-2);
+  background-color: var(--color-white);
+  border-bottom: var(--line);
   display: flex;
   justify-content: space-between;
   align-items: center; }
@@ -64,9 +64,27 @@ body {
   justify-content: space-between; }
 
 .hotel-view {
-  height: 80rem;
-  background-color: orangered;
   flex: 1; }
+
+.details {
+  display: flex;
+  padding: 4.5rem;
+  background-color: var(--color-grey-light-1);
+  border-bottom: var(--line); }
+
+.description {
+  font-size: 1.4rem;
+  flex: 0 0 60%;
+  order: 1;
+  background-color: var(--color-white);
+  box-shadow: var(--shadow-light);
+  padding: 3rem;
+  margin-right: 4.5rem; }
+
+.user-reviews {
+  flex: 1;
+  order: 2;
+  background: greenyellow; }
 
 .logo {
   height: 3.25rem;
@@ -190,3 +208,77 @@ body {
   color: var(--color-grey-light-4);
   font-size: 1.5rem;
   padding: 2.5rem; }
+
+.gallery {
+  display: flex; }
+  .gallery__photo {
+    display: block;
+    width: 100%; }
+
+.overview {
+  display: flex;
+  align-items: center;
+  border-bottom: var(--line); }
+  .overview__heading {
+    font-size: 2.25rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    padding: 1.5rem 3rem; }
+  .overview__stars {
+    margin-right: auto;
+    display: flex; }
+  .overview__icon-star, .overview__icon-location {
+    width: 1.75rem;
+    height: 1.75rem;
+    fill: var(--color-primary); }
+  .overview__icon-location {
+    margin-right: .5rem; }
+  .overview__location {
+    font-size: 1.2rem;
+    display: flex;
+    align-items: center; }
+  .overview__rating {
+    background-color: var(--color-primary);
+    color: #fff;
+    margin-left: 3rem;
+    align-self: stretch;
+    padding: 0 2.25rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; }
+  .overview__rating-average {
+    font-size: 2.5rem;
+    font-weight: 300;
+    margin-bottom: -.3rem; }
+  .overview__rating-count {
+    font-size: .8ren;
+    text-transform: uppercase; }
+
+.btn-inline {
+  display: inline-block;
+  border: none;
+  font-size: inherit;
+  padding-bottom: 2px;
+  color: var(--color-primary);
+  border-bottom: 1px solid currentColor;
+  background-color: transparent;
+  cursor: pointer;
+  transition: all .2s; }
+  .btn-inline:hover {
+    color: var(--color-grey-dark-1); }
+  .btn-inline:focus {
+    outline: none;
+    backface-visibility: hidden; }
+
+@keyframes btnzoom {
+  0% {
+    transform: scale(1);
+    box-shadow: none; }
+  50% {
+    transform: scale(1.1);
+    box-shadow: 0 1rem 4rem rgba(0, 0, 0, 0.25); }
+  100% {
+    transform: scale(1);
+    box-shadow: none; } }
