--- a/2-Trillo/sass/_base.scss
+++ b/2-Trillo/sass/_base.scss
@@ -1,13 +1,12 @@
-/*
-COLORS
 
-
-*/
 :root{
+
+    /*COLORS*/
     --color-primary:#eb2f64;
     --color-primary-light:#FF3366;
     --color-primary-dark:#BA265D;
 
+    --color-white: #fff;
     --color-grey-light-1: #faf9f9;
     --color-grey-light-2: #f4f2f2;
     --color-grey-light-3: #f0eeee;
@@ -16,8 +15,11 @@ COLORS
     --color-grey-dark-1: #333;
     --color-grey-dark-2: #777;
     --color-grey-dark-3: #999;
-
+    
+    /*Others varaiables*/
     --shadow-dark: 0 2rem 6rem rgba(0,0,0,.3);
+    --shadow-light: 0 2rem 5rem rgba(0, 0, 0, .06);
+    --line: 1px solid var(--color-grey-light-2);
 
 }
 *,
@@ -41,6 +43,6 @@ body{
     background-image: linear-gradient(to right bottom, var(--color-primary-light), var(--color-primary-dark));
     background-size: cover;
     background-repeat: no-repeat;
-    min-height: 100vh;
+    min-height: 95vh;
 
 }
