--- a/2-Trillo/sass/_components.scss
+++ b/2-Trillo/sass/_components.scss
@@ -89,7 +89,7 @@
         top: 1.5rem;
         right: 1.2rem;
     }
-    &__user{}
+    // &__user{}
     // &__user-name{}
     &__user-photo{
         height: 3.75rem;
@@ -152,12 +152,112 @@
 
 }
 
-// copyrighttext
+// copyright text
 .copyright{
     text-align: center;
     text-transform: capitalize;
     color: var(--color-grey-light-4);
     font-size: 1.5rem;
     padding: 2.5rem;
+}
 
+// Gallery photos
+.gallery{
+    display: flex;
+    &__photo{
+        display: block;
+        width: 100%;
+    }
+}
+
+// overview
+.overview{
+    display: flex;
+    align-items: center;
+    border-bottom: var(--line);
+    &__heading {
+        font-size: 2.25rem;
+        font-weight: 300;
+        text-transform: uppercase;
+        letter-spacing: 1px;
+        padding: 1.5rem 3rem;
+    }
+    &__stars {
+        margin-right: auto;
+        display:flex;
+    }
+    &__icon-star,
+    &__icon-location{
+        width: 1.75rem;
+        height: 1.75rem;
+        fill: var(--color-primary);
+    }
+    &__icon-location{
+        margin-right: .5rem;
+    }
+    &__location{
+        font-size: 1.2rem;
+        display: flex;
+        align-items: center;
+    }
+    &__rating{
+        background-color: var(--color-primary);
+        color: #fff;
+        margin-left: 3rem;
+        align-self: stretch;
+        padding: 0 2.25rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    &__rating-average{
+        font-size: 2.5rem;
+        font-weight: 300;
+        margin-bottom: -.3rem;
+    }
+    &__rating-count{
+        font-size: .8ren;
+        text-transform: uppercase;
+    }
+}
+
+// Buttontn inline
+
+.btn-inline{
+    display: inline-block;
+    border: none;
+    font-size: inherit;
+    padding-bottom: 2px;
+    color: var(--color-primary);
+    border-bottom: 1px solid currentColor;
+    background-color: transparent;
+    cursor: pointer;
+    transition: all .2s;
+    &:hover{
+        color: var(--color-grey-dark-1);
+    }
+    &:focus{
+        outline: none;
+        // animation: btnzoom 1s infinite;
+        backface-visibility: hidden;
+    }
+}
+
+@keyframes btnzoom{
+    0% {
+        transform: scale(1);
+        box-shadow: none;
+    }
+
+    50% {
+        transform: scale(1.1);
+        box-shadow: 0 1rem 4rem rgba(0,0,0,.25);
+    }
+
+    100% {
+        transform: scale(1);
+        box-shadow: none
+
+    }
 }
