--- a/2-Trillo/sass/_layout.scss
+++ b/2-Trillo/sass/_layout.scss
@@ -9,8 +9,8 @@
 .header{
     height: 7rem;
     font-size: 1.4rem;
-    background-color: #fff;
-    border-bottom: var(--color-grey-light-2);
+    background-color: var(--color-white);
+    border-bottom: var(--line);
     
     display: flex;
     justify-content: space-between;
@@ -29,7 +29,28 @@
 }
 
 .hotel-view{
-    height: 80rem;
-    background-color: orangered;
     flex: 1;
+}
+
+// details section
+
+.details{
+    display: flex;
+    padding: 4.5rem;
+    background-color: var(--color-grey-light-1);
+    border-bottom: var(--line);
+}
+.description{
+    font-size: 1.4rem;
+    flex: 0 0 60%;
+    order: 1;
+    background-color: var(--color-white);
+    box-shadow: var(--shadow-light);
+    padding: 3rem;
+    margin-right: 4.5rem;
+}
+.user-reviews{
+    flex: 1;
+    order: 2;
+    background: greenyellow;
 }
