--- a/2-Trillo/sass/_base.scss
+++ b/2-Trillo/sass/_base.scss
@@ -20,8 +20,15 @@
     --shadow-dark: 0 2rem 6rem rgba(0,0,0,.3);
     --shadow-light: 0 2rem 5rem rgba(0, 0, 0, .06);
     --line: 1px solid var(--color-grey-light-2);
-
 }
+
+// sass variables
+$bp-largest:75em; //1200px
+$bp-large:68.75em; //1100px
+$bp-medium:56.25em; //900px
+$bp-small:37.5em; //600px
+$bp-smallest:31.25em; //500px
+
 *,
 ::before,
 ::after{
@@ -33,6 +40,9 @@
 html{
     box-sizing: border-box;
     font-size: 62.5%;
+    @media only screen and(max-width:$bp-large){
+        font-size: 50%;
+    }
 }
 
 body{
