--- a/2-Trillo/sass/_components.scss
+++ b/2-Trillo/sass/_components.scss
@@ -10,6 +10,11 @@
     flex: 0 0 40%;
     align-items: center;
     justify-content: center;
+    @media only screen and(max-width:$bp-smallest){
+        order: 1;
+        // background-color: var(--color-grey-light-2);
+        flex: 0 0 100%;
+    }
     &__input{
         font-family: inherit;
         font-family: inherit;
@@ -25,7 +30,11 @@
             width: 100%;
             outline: none;
             background-color: var(--color-grey-light-3);
+            @media only screen and(max-width:$bp-smallest){
+                width: 80%;
+            }
         }
+        
         &::-webkit-input-placeholder{
             font-weight: 100;
             color: var(--color-grey-light-4);
@@ -103,10 +112,20 @@
     font-size: 1.4rem;
     list-style: none;
     margin-top: 3.5rem;
+    @media only screen and(max-width:$bp-medium){
+        display: flex;
+        margin: 0;
+    }
     &__item{
         position: relative;
         &:not(:last-child){
             margin-bottom: .5rem;
+            @media only screen and(max-width:$bp-medium){
+                margin-bottom: 0;
+            }
+        }
+        @media only screen and(max-width:$bp-medium){
+            flex:1;
         }
     }
     &__item::before{
@@ -142,12 +161,26 @@
 
         display: flex;
         align-items: center;
+        @media only screen and(max-width:$bp-medium){
+            justify-content: center;
+            padding: 2rem;
+        }
+        @media only screen and(max-width:$bp-small){
+            flex-direction: column;
+            padding: 1.5rem .5rem;
+        }
     }
     &__icon{
         height: 1.75rem;
         width: 1.75rem;
         margin-right: 2rem;
         fill: currentColor;
+        @media only screen and(max-width:$bp-small){
+            margin-right:0;
+            margin-bottom: .7rem;
+            height: 1.5rem;
+            width: 1.5rem;
+        }
     }
 
 }
@@ -159,6 +192,9 @@
     color: var(--color-grey-light-4);
     font-size: 1.5rem;
     padding: 2.5rem;
+    @media only screen and(max-width:$bp-medium){
+        display: none;
+    }
 }
 
 // Gallery photos
@@ -181,6 +217,9 @@
         text-transform: uppercase;
         letter-spacing: 1px;
         padding: 1.5rem 3rem;
+        @media only screen and(max-width:$bp-small){
+            padding: 1.25rem 2rem;
+        }
     }
     &__stars {
         margin-right: auto;
@@ -210,6 +249,9 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        @media only screen and(max-width:$bp-small){
+            padding: 0 1.5rem;
+        }
     }
     &__rating-average{
         font-size: 2.5rem;
@@ -217,8 +259,11 @@
         margin-bottom: -.3rem;
     }
     &__rating-count{
-        font-size: .8ren;
+        font-size: .8rem;
         text-transform: uppercase;
+        @media only screen and(max-width:$bp-small){
+            font-size: .5rem;
+        }
     }
 }
 
@@ -234,8 +279,16 @@
     background-color: transparent;
     cursor: pointer;
     transition: all .2s;
+
+    span{
+        margin-left: 3px;
+        transition: margin-left .2s;
+    }
     &:hover{
         color: var(--color-grey-dark-1);
+        span{
+            margin-left: 8px;
+        }
     }
     &:focus{
         outline: none;
@@ -260,4 +313,186 @@
         box-shadow: none
 
     }
+}
+
+// paragraph
+.paragraph:not(:last-of-type){
+    margin-bottom: 2rem;
+}
+
+// list
+
+.list{
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    margin: 3rem 0;
+    padding: 3rem 0;
+    border-bottom: var(--line);
+    border-top: var(--line);
+    &__item{
+        flex: 0 0 50%;
+        margin-bottom: .7rem;
+    }
+    &__item::before{
+        content: "";
+        display: inline-block;
+        height: 1rem;
+        width: 1rem;
+        margin-right: 1rem;
+        /* old browsers*/
+        background-image: url(../img/chevron-thin-right.svg);
+        background-size: cover;
+        
+        @supports (-webkit-mask-image: url()) or (mask-image: url()){
+            background-color: var(--color-primary);
+            -webkit-mask-image: url(../img/chevron-thin-right.svg);
+            -webkit-mask-size: cover;
+            mask-image: url(../img/chevron-thin-right.svg);
+            mask-size: cover;
+            background-image: none;
+        }
+        
+    }
+}
+
+.recommend{
+    font-size: 1.3rem;
+    color: var(--color-grey-dark-3);
+    display: flex;
+    align-items: center;
+    &__count{
+        margin-right: auto;
+    }
+    &__freinds{
+        display: flex;
+    }
+    &__photo{
+        box-sizing: content-box; // border would effects the width and height
+        width: 4rem;
+        height: 4rem;
+        border: 3px solid var(--color-white);
+        border-radius: 50%;
+        &:not(:last-child){
+            margin-right: -2rem;
+        }
+    }
+}
+
+.review{
+    position: relative;
+    background-color: var(--color-white);
+    box-shadow: var(--shadow-light);
+    padding:3rem;
+    margin-bottom: 3.5rem;
+    overflow: hidden;
+    @media only screen and(max-width:$bp-medium){
+        padding: 2rem;
+        margin-bottom: 3rem;
+    }
+    &__text{
+        margin-bottom: 2.5rem;
+        position: relative;
+        z-index: 10;
+    }
+    &__user{
+        display: flex;
+        align-items: center;
+
+    }
+    &__photo{
+        height: 4.5rem;
+        width: 4.5rem;
+        border-radius: 50%;
+    }
+    &__user-box{
+        margin-right: auto;
+        margin-left: 1.25rem;
+    }
+    &__user-name{
+        font-weight: 700;
+        font-size: 1.25rem;
+        text-transform: uppercase;
+        margin-bottom: .4rem;
+    }
+    &__user-date{
+        // font-weight: 100;
+        font-size: 1rem;
+        color: var(--color-grey-dark-3);
+    }
+    &__rating{
+        font-weight: 300;
+        font-size: 2.2rem;
+        color: var(--color-primary);
+    }
+    &::before{
+        content: "\201C";
+        position: absolute;
+        top: -2.75rem;
+        line-height: 1;
+        left: -1rem;
+        font-size: 20rem;
+        font-family: sans-serif;
+        color: var(--color-grey-light-2);
+        z-index: 1;
+    }
+} 
+
+// cta
+
+.cta{
+    padding: 3.5rem 0;
+    text-align: center;
+    @media only screen and(max-width:$bp-medium){
+        padding: 2.5rem 0;
+    }
+    &__book-now{
+        font-size: 2rem;
+        font-weight: 300;
+        text-transform: uppercase;
+        margin-bottom: 2.5rem;
+    }
+}
+
+.btn{
+    position: relative;
+    font-size: 1.5rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    border-radius: 100px;
+    background-image: linear-gradient(to right, var(--color-primary-light), var(--color-primary-dark));
+    color: var(--color-white);
+    border: none;
+    overflow: hidden;
+    & > *{
+        display: inline-block;
+        height: 100%;
+        width: 100%;
+        transition: all .3s ease-in-out;
+        cursor: pointer;
+    }
+    &__visible{
+        
+        padding: 2rem 7.5rem;
+    }
+    &__invisible{
+        
+        position: absolute;
+        padding: 2rem 0;
+        left: 0;
+        top: -100%;
+    }
+    &:hover{
+        background-image: linear-gradient(to left, var(--color-primary-light), var(--color-primary-dark));
+    }
+    &:hover &__visible{
+        transform: translateY(100%);
+    }
+    &:hover &__invisible{
+        top: 0;
+    }
+    &:focus{
+        outline: none;
+    }
+
 }
