--- a/2-Trillo/sass/_layout.scss
+++ b/2-Trillo/sass/_layout.scss
@@ -4,6 +4,11 @@
     margin:8rem auto;
     background-color: var(--color-grey-light-1);
     box-shadow: var(--shadow-dark);
+    @media only screen  and(max-width:$bp-largest){ 
+        margin: 0;        
+        max-width: 100%;
+        width: 100%;
+    }
     
 }
 .header{
@@ -15,9 +20,17 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    @media only screen and(max-width:$bp-smallest){
+        flex-wrap: wrap;
+        height: 11rem;
+        align-content: space-around;
+    }
 }
 .content{
     display:flex ;
+    @media only screen and(max-width:$bp-medium){
+        flex-direction: column;
+    }
 }
 
 .sidebar{
@@ -35,22 +48,39 @@
 // details section
 
 .details{
+    font-size: 1.4rem;
     display: flex;
     padding: 4.5rem;
     background-color: var(--color-grey-light-1);
     border-bottom: var(--line);
+    @media only screen and(max-width:$bp-medium){
+        padding: 3rem;
+    }
+    @media only screen and(max-width:$bp-small){
+        flex-direction: column;
+    }
 }
 .description{
-    font-size: 1.4rem;
     flex: 0 0 60%;
-    order: 1;
+    // order: 1;
     background-color: var(--color-white);
     box-shadow: var(--shadow-light);
     padding: 3rem;
     margin-right: 4.5rem;
+    @media only screen and(max-width:$bp-medium){
+        padding: 2rem;
+        margin-right: 3rem;
+    }
+    @media only screen and(max-width:$bp-small){
+        margin-right: 0;
+        margin-bottom: 3rem;
+    }
 }
 .user-reviews{
+    display: flex;
+    flex-direction: column;
     flex: 1;
-    order: 2;
-    background: greenyellow;
+    align-items: center;
+    // order: 2;
+    // background: greenyellow;
 }
