--- a/3-Nexter/sass/_base.scss
+++ b/3-Nexter/sass/_base.scss
@@ -31,4 +31,14 @@ body{
     font-family: $font-primary;
     color: $color-grey-dark-2;
     font-weight: 300;
+    line-height: 1.6;
+}
+
+
+.container{
+    display: grid;
+    grid-template-rows: 80vh min-content 40vw repeat(3, min-content);
+    grid-template-columns: [sidebar-start] 8rem [sidebar-end grid-start] minmax(6rem, 1fr)    
+    [center-start] repeat(8, [col-start] minmax(min-content, 14rem) [col-end]) [center-end] 
+    minmax(6rem, 1fr) [grid-end];    
 }
